# coffee-pi

./: .gitignore  LICENSE  README.md  config.py  environment.yml  pyproject.toml  requirements.txt  silvia-pi.py
app/: app.py  config.py
app/static/css/: bootstrap-theme.css  bootstrap.css
app/static/js/: index.js
app/templates/: index.html
static/js/: index.js
templates/: index.html
www/: index.html
www/js/: index.js
