[tool.poetry]
name = "coffe-pi"
version = "0.1.0"
description = ""
authors = ["Alex Müller <alexarnimueller@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
schedule = "^1.0"
board = "^1.0"
flask = "^1.0"
simple_pid = "^0.2"
gpiozero = "^1.5"
adafruit-max31855 = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"