[tool.poetry]
name = "coffe-pi"
version = "0.1.0"
description = ""
authors = ["Alex Müller <alexarnimueller@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
schedule = "^1.2"
board = "^1.0"
flask = "^2.3"
simple_pid = "^2.0"
gpiozero = "^1.6"
adafruit-circuitpython-max31855 = "^3.2.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"